<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_da_tarefa"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_titulo_nova_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao_da_tarefa"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_descricao_nova_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prazo_final"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_data_vencimento_nova_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"  android:hint="@string/dd_mm_yyyy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/spinner_status_tarefa"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@color/cardview_shadow_start_color"
        android:layout_height="wrap_content"
        android:entries="@array/status_options" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_tag_enum"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:background="@color/cardview_shadow_start_color"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:entries="@array/tag_options" />


    <Button
        android:id="@+id/btn_salvar_nova_tarefa"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar_tarefa"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"

        />

</LinearLayout>
