<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_titulo_tarefa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Título da tarefa" />

            <ImageView
                android:id="@+id/btn_excluir_tarefa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@android:drawable/ic_delete" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_descricao_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Descrição cadastrada da tarefa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_tarefa"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_status_tarefa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Em progresso" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prazo_final_tarefa"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_prazo_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="01/01/2026" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"> <!-- Adicionado margem superior para espaçamento -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioridade"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_prioridade_tarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="BAIXA" />

    </LinearLayout>
</LinearLayout>

    </androidx.cardview.widget.CardView>